[gd_scene load_steps=6 format=2]

[ext_resource path="res://Building/Construct.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Building/Construct/arrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Building/Construct/arrow_down.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Building/Construct/arrow_up.png" type="Texture" id=5]
[ext_resource path="res://Nodes/AnimatedTileMap.tscn" type="PackedScene" id=6]

[node name="Construct" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedTileMap" parent="." instance=ExtResource( 6 )]

[node name="Arrows" type="Node2D" parent="."]
z_index = 100

[node name="ArrowRight" type="TextureButton" parent="Arrows" groups=["arrow_horizontal", "arrows"]]
visible = false
margin_right = 24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 12, 12 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowBack" type="TextureButton" parent="Arrows/ArrowRight" groups=["arrow_back", "arrow_back_horizontal"]]
modulate = Color( 1, 1, 1, 0.14902 )
margin_left = -24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 12, 12 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowUp" type="TextureButton" parent="Arrows" groups=["arrow_reverse", "arrow_vertical", "arrows"]]
visible = false
margin_right = 24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 12, 12 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowBack" type="TextureButton" parent="Arrows/ArrowUp" groups=["arrow_back", "arrow_back_vertical"]]
modulate = Color( 1, 1, 1, 0.14902 )
margin_left = 1.0
margin_top = 24.0
margin_right = 25.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 12, 12 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowDown" type="TextureButton" parent="Arrows" groups=["arrow_vertical", "arrows"]]
visible = false
margin_right = 24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 12, 12 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowBack" type="TextureButton" parent="Arrows/ArrowDown" groups=["arrow_back", "arrow_back_vertical"]]
modulate = Color( 1, 1, 1, 0.14902 )
margin_left = -1.0
margin_top = -24.0
margin_right = 23.0
rect_pivot_offset = Vector2( 12, 12 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowLeft" type="TextureButton" parent="Arrows" groups=["arrow_horizontal", "arrow_reverse", "arrows"]]
visible = false
margin_right = 24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 12, 12 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowBack" type="TextureButton" parent="Arrows/ArrowLeft" groups=["arrow_back", "arrow_back_horizontal"]]
modulate = Color( 1, 1, 1, 0.14902 )
margin_left = 24.0
margin_right = 48.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 12, 12 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Arrows/ArrowRight" to="." method="_on_ArrowRight_pressed"]
[connection signal="pressed" from="Arrows/ArrowRight/ArrowBack" to="." method="_on_ArrowRight_ArrowBack_pressed"]
[connection signal="pressed" from="Arrows/ArrowUp" to="." method="_on_ArrowUp_pressed"]
[connection signal="pressed" from="Arrows/ArrowUp/ArrowBack" to="." method="_on_ArrowUp_ArrowBack_pressed"]
[connection signal="pressed" from="Arrows/ArrowDown" to="." method="_on_ArrowDown_pressed"]
[connection signal="pressed" from="Arrows/ArrowDown/ArrowBack" to="." method="_on_ArrowDown_ArrowBack_pressed"]
[connection signal="pressed" from="Arrows/ArrowLeft" to="." method="_on_ArrowLeft_pressed"]
[connection signal="pressed" from="Arrows/ArrowLeft/ArrowBack" to="." method="_on_ArrowLeft_ArrowBack_pressed"]
